# cerberus

./: .gitignore  CMakeLists.txt  create_lib.py  main.c  readme.md
apps/: CMakeLists.txt  stereo_kitti.c
apps/gui_playground/: main.c
apps/inertial_simulation/: main.c  trajectory.h
apps/kitti_stereo/: CMakeLists.txt  main.cpp
apps/stereo_kitti/: stereo_kitti.c
apps/utils/: CMakeLists.txt
apps/utils/include/utils/: program_arguments.h
apps/utils/src/: program_arguments.cpp
cerberus/: CMakeLists.txt
cerberus/include/cerberus/: image.h
cerberus/tests/: tests_orb.cpp
core/: CMakeLists.txt
core/include/core/: units.h
core/linear_algebra/: CMakeLists.txt
core/linear_algebra/include/linear_algebra/: matrix3d.h  matrix4f.h  vector3d.h  vector3f.h  vector4f.h
core/linear_algebra/src/: matrix3d.c  matrix4f.c  vector3d.c  vector3f.c
core/linear_algebra/tests/: CMakeLists.txt  tests_matrix3d.cpp  tests_matrix4f.cpp
core/types/: CMakeLists.txt
core/types/include/types/: euler.h  orientation_conversions.h  rotation_matrix.h  units.h
core/types/src/: orientation_conversions.c  rotation_matrix.c
core/types/tests/: CMakeLists.txt  tests_orientation_conversions.cpp  tests_units.cpp
cv/: CMakeLists.txt
cv/include/cv/: cv.h  image.h  io.h  orb.h
cv/src/: image.c  io.c  orb.c
cv/tests/: CMakeLists.txt  tests_image.cpp  tests_image.h  tests_io.cpp  tests_io.h
geodetic/: CMakeLists.txt
geodetic/include/geodetic/: geodetic.h
geodetic/src/: geodetic.c
geodetic/tests/: CMakeLists.txt  tests_geodetic.cpp
gui/: CMakeLists.txt
gui/include/gui/: camera3d.h  grid.h  image_window.h  main_window.h  shader.h
gui/src/: camera3d.c  grid.c  image_window.c  main_window.c  shader.c
inertial/: CMakeLists.txt
inertial/include/inertial/: inertial.h
inertial/src/: inertial.c
sim/: CMakeLists.txt
utils/: CMakeLists.txt
utils/include/utils/: kitti_data_reader.h
utils/src/: kitti_data_reader.c
vis/: CMakeLists.txt
vis/include/vis/: image_window.h  main_window.h
vis/src/: image_window.c  main_window.c
